# college-project-stock-management-in-c-

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
data/: estoque.txt
docs/: backend-class-diagram.md  backend-class-diagram.mmd  diagrama_classes_graphviz.dot  gerar_diagramas.ps1
include/: ConsoleUtils.hpp  Estoque.hpp  ItemEstoque.hpp  PersistenciaArquivo.hpp  Produto.hpp
include/api/: ApiError.hpp  AppConfig.hpp  InventoryModels.hpp  InventoryService.hpp  ItemTypeProfile.hpp
include/http/: InventoryController.hpp
sql/: schema.sql
src/: ConsoleUtils.cpp  Estoque.cpp  ItemEstoque.cpp  PersistenciaArquivo.cpp  Produto.cpp  main.cpp
src/api/: AppConfig.cpp  InventoryService.cpp  ItemTypeProfile.cpp
src/http/: InventoryController.cpp
